# DataStructuresC

./: CMakeLists.txt  template.c
hw1/: hw1.c  testInput.txt  testInput1.txt  testInput2.txt
hw2/: dontREADME  hw2.c  testInput1.txt  testInput2.txt
hw3/: hw3  hw3.c  testCode  testData.txt  testData1.txt  testData2.txt  testOutput1.txt  testQueries1.txt  testQueries2.txt
hw4/: hw4.c  hw4_extra.c  test.h  testInput1.txt  testInput2.txt  testInput3.txt
hw5/: codeGraveyard  fakeRandHeight.c  fakeRandHeight.h  hw5.c  hw5.h  skipList.c  skipList.h  testInput1.txt  testInput2.txt  testInput3.txt
hw6/: e2testInput1.txt  e3testInput.txt  extra1TestInput1.txt  hw6.c  hw6.h  hw6extra1.c  hw6extra2.c  hw6extra3.c  myTestInput1.txt  myTestInput2.txt  myTestInput3.txt  myTestInput4.txt  pQueueTest.c  testInput2.txt
hw6/testInputs/: myTestInput1.txt  myTestInput2.txt  myTestInput4.txt
